0025732: Visualization, TKOpenGl - back face culling should not affect textured font rendering

OpenGl_TextFormatter - orient triangles in normal counter-clockwise order (GL_CCW).

Test-cases for issue #25732